# arxiv-oai-scripts

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  analyze_arxiv_oai.py  batch_import.py  check_embeddings_tei.py  download_files_pubmed.py  example_usage.sh  explore_h5_embeddings.py  find_failed_papers.py  generate_embeddings_arxiv_oai.py  generate_embeddings_tei.py  generate_embeddings_with_tei.py  generate_embeddings_with_vllm.py  import2qdrant.py  import_to_qdrant.py  parse_files_pubmed.py  requirements.txt  search_arxiv_papers.py  search_embeddings.py  search_embeddings_gpu.py  search_with_qdrant.py  start_qdrant.sh  test_sampling.py  unzip_files_pubmed.py  verify_embeddings.py  verify_embeddings_tei.py
src/: main.rs
version1/: analyze_h5_embeddings.py  check_h5_embeddings.py  check_qdrant_or_h5_embeddings.py  compare_embeddings_backend.py  explore_h5_embeddings.py  generate_embeddings_arxiv_oai.py  import_to_qdrant.py  merge_h5_files.py  search_with_qdrant.py  verify_embeddings.py
version2/: Cargo.toml  generate_embedding_v2.py
version2/src/: main.rs
~/.cargo/: config
